--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "@graphql-tools/schema": "^9.0.12",
+    "@sentry/node": "^9.34.0",
     "express": "4.21.2",
     "express-sanitizer": "^1.0.6",
     "graphql": "^16.8.1",
-    "@apollo/server": "^4.11.0",
-    "@graphql-tools/schema": "^9.0.12",
-    "@sentry/node": "^9.32.0"
+    "knex": "^3.1.0",
+    "pg": "^8.12.0"
   }
 }
